--- a/static/css/main.css
+++ b/static/css/main.css
@@ -57,7 +57,8 @@
 
 #lower-bar {
     width: 100%;
-    height: 30px;
+    height: 40px;
+    margin-bottom: 10px;
 }
 
 #lower-bar-triple-section {
