--- a/templates/index.html
+++ b/templates/index.html
@@ -48,11 +48,11 @@
             </form>
 
             <p>
-                Or <a href="/photos">click here</a> to login if you already have an account with us.
+                Or  <a href="/photos">click here</a> to login if you already have an account with us.
             </p>
         </div>
         <div id="video-section">
-        <video id="tutorial-video" width="720" height="480" controls>
+        <video preload="none" id="tutorial-video" width="720" height="480" controls poster="/static/videos/poster.png">
           <source src="/static/videos/tutorial.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
